--- a/readme
+++ b/readme
@@ -1,1 +1,27 @@
+**pca**
+
+**pcangsd**
+
+**fst**
+
+*windowed vs. per-SNP fst**
+
+**dxy**: describe different approaches
+
+**nucleotide diversity**
+
+**Tajima's D**
+
+**getMAF domajorminor**
+
+**LD**
+
+**relatedness**
+
+**admixture**
+
+**organize this by types of analysis**
+
+**potential issues, our recommended practices, link to scripts and insructions**
+
 
