--- a/markdowns/lcwgs_data_analysis.Rmd
+++ b/markdowns/lcwgs_data_analysis.Rmd
@@ -1,8 +1,6 @@
 ---
 title: "Population genomic analysis of low-coverage whole genome data"
-output: 
-  html_document:  
-    keep_md: TRUE
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
@@ -16,7 +14,7 @@ This collection of scripts cover the data analysis part of the low-coverage whol
 We aim to generate a pipeline that is user-friendly and highly flexible (e.g. it should be compatible to most study organisms, sequencing configuration, and computing server structure). However, this is still a work in progress. Please submit a GitHub issue if you encounter any problems, and we will try to get back to you in a timely fashion. 
 
 ```{r echo=FALSE}
-knitr::include_graphics("../misc/fig2_lcwgs_guide.png")
+knitr::include_graphics("misc/fig2_lcwgs_guide.png")
 ```
 
 
